# Radial_migration

./: README.md
2D/: CMakeLists.txt  single_plots.py
2D/Log_pot/: CMakeLists.txt
2D/Log_pot/include/: Dehnen_DF.h  LogPot.h
2D/Log_pot/source/: Dehnen_DF.cpp  LogPot.cpp
2D/VecUtils/include/: VecUtils.h
3D/Log_pot/include/: LogPot.h
3D/Log_pot/source/: LogPot.cpp
3D/VecUtils/include/: VecUtils.h
3D/VecUtils/source/: CMakeLists.txt
